# trend-line-strat-spec-kit

./: .gitignore  README.md  pyproject.toml  pytest.ini
configs/: backtest_example.json  detect_example.json
data/: README.md
specs/001-trendline-breakout/: changelog.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-trendline-breakout/contracts/: breakout-detection.json  price-data-api.json  trade-ranking.json  (+1 more)
src/cli/: backtest_cmd.py  detect_cmd.py  main.py
src/contracts/: schemas.py
src/lib/: data_storage.py  timeframe.py  validators.py
src/models/: breakout.py  crypto_pair.py  supply_demand.py  trade_setup.py  trendline.py
src/services/: backtester.py  breakout_detector.py  price_fetcher.py  supply_demand_detector.py  trade_ranker.py  trendline_detector.py
tests/: conftest.py
tests/cli/: test_cli_commands.py
tests/contract/: test_breakout_contract.py  test_price_api_contract.py  test_trade_ranking_contract.py  test_trendline_contract.py
tests/integration/: conftest.py  test_a_plus_setup_flow.py  test_backtest_flow.py  test_breakout_detection_flow.py  test_trendline_detection_flow.py
tests/unit/: test_backtester_service.py  test_breakout_detector_service.py  test_breakout_model.py  test_crypto_pair_model.py  test_data_storage.py  test_price_fetcher_service.py  test_supply_demand_detector_service.py  test_supply_demand_model.py  test_timeframe_utils.py  test_trade_ranker_service.py  test_trade_setup_model.py  test_trendline_detector_service.py  test_trendline_model.py  test_validators.py
